--- a/index.html
+++ b/index.html
@@ -251,5 +251,11 @@
   </template>
 
   <script src="js/main.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/card.js"></script>
+  <script src="js/pin.js"></script>
+  <script src="js/map.js"></script>
+  <script src="js/page-activation.js"></script>
+  <script src="js/form.js"></script>
 </body>
 </html>
