Надо подкачаться_task_1

--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@
   </template>
 
   <script src="js/main.js"></script>
-  <script src="js/data.js"></script>
+  <script src="js/load.js"></script>
+  <script src="js/upload.js"></script>
   <script src="js/card.js"></script>
   <script src="js/move.js"></script>
   <script src="js/pin.js"></script>
