--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <section class="notice">
       <h2 class="notice__title">Ваше объявление</h2>
       <form class="ad-form ad-form--disabled" method="post"
-            action="https://21.javascript.pages.academy/keksobooking"
+            action="#"
             enctype="multipart/form-data" autocomplete="off">
         <fieldset class="ad-form-header">
           <legend class="ad-form-header__title">Ваша фотография (для карты)</legend>
@@ -146,9 +146,9 @@
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="capacity">Количество мест</label>
           <select id="capacity" name="capacity">
-            <option value="3" selected>для 3 гостей</option>
+            <option value="3">для 3 гостей</option>
             <option value="2">для 2 гостей</option>
-            <option value="1">для 1 гостя</option>
+            <option value="1" selected>для 1 гостя</option>
             <option value="0">не для гостей</option>
           </select>
         </fieldset>
@@ -254,10 +254,10 @@
   <script src="js/load.js"></script>
   <script src="js/upload.js"></script>
   <script src="js/card.js"></script>
+  <script src="js/map.js"></script>
   <script src="js/move.js"></script>
   <script src="js/pin.js"></script>
-  <script src="js/map.js"></script>
-  <script src="js/page-activation.js"></script>
+  <script src="js/page-state.js"></script>
   <script src="js/form.js"></script>
 </body>
 </html>
