--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
   <script src="js/map.js"></script>
   <script src="js/move.js"></script>
   <script src="js/pin.js"></script>
+  <script src="js/filter.js"></script>
   <script src="js/page-state.js"></script>
   <script src="js/form.js"></script>
 </body>
