--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
   </template>
 
   <script src="js/main.js"></script>
+  <script src="js/debounce.js"></script>
   <script src="js/load.js"></script>
   <script src="js/upload.js"></script>
   <script src="js/card.js"></script>
