--- a/index.html
+++ b/index.html
@@ -252,8 +252,7 @@
 
   <script src="js/main.js"></script>
   <script src="js/debounce.js"></script>
-  <script src="js/load.js"></script>
-  <script src="js/upload.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/card.js"></script>
   <script src="js/map.js"></script>
   <script src="js/move.js"></script>
